# perturb_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config_rsync.ipynb  dockerfile  env_utils.py  params.yml  pyproject.toml  requirements.txt  requirements_backup.txt  requirements_good.txt  ruff.txt
chatgpt/: degs  talk to chatgpt to create kivy and streamlit
notebooks/: aggrid_smoke_test.py  app_main_local.py  calc_degs.R  calc_degs_wraper.py  check_python_x_RScript.ipynb  cluster_10__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_1__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_1_signature_genes.txt  cluster_2__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_2_signature_genes.txt  cluster_3__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_3_signature_genes.txt  cluster_4__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_4_signature_genes.txt  cluster_5__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_5_signature_genes.txt  cluster_6__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_7__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_8__signature_genes_using_LFC_1_FDR_0.05.txt  cluster_9__signature_genes_using_LFC_1_FDR_0.05.txt  clusters_10_signatures_for_.txt  clusters_3_signatures_for_.txt  counts.tsv  dash01_py4cyt_owl_dvlp.ipynb  dash02_py4cyt_owl_dvlp.ipynb  dash03_py4cyt_owl.ipynb  dash03_test_dash_graph.ipynb  degs.txt  degs_ensembl.txt  docker_config.ipynb  dowload_gene_description.ipynb  download_cBioPortal_genomics_data.ipynb  estudo_chagas.ipynb  fine_tuning.ipynb  get_reactome_gmt.ipynb  get_reactome_owls.ipynb  get_reactome_owls_dvlp.ipynb  gtex_normal_tissue.ipynb  gtex_normal_tissue_dvlp.ipynb  install_R.ipynb  (+62 more)
notebooks/backup/: dash01_py4cyt_owl copy.ipynb  dash02_py4cyt_owl_dvlp.ipynb  mtp_TCGA_03b_mapping_LNC_x_diseases.ipynb  mtp_TCGA_03c_expression_tumor_normal_backup.ipynb  tcga_gdc_progams_and_cancer2.ipynb
notebooks_dvlp/: aggrid_smoke_test.py  app_main_local.py  check_python_x_RScript.ipynb  dashcyto_lib_chatgpt.py  docker_config.ipynb  download_cBioPortal_genomics_data.ipynb  download_gdc_genomics_data.ipynb  kivy_UI_GDC_test01.py  kivy_UI_GDC_test02.py  kivy_UI_display_all.py  kivy_UI_dropdown_cascade.py  literature.ipynb  mcp01_perturb_genes.ipynb  mcp02_tcga.ipynb  mcp03_multi_agent_tcga.ipynb  rag01_reactome_to_vectorstore.ipynb  streamlit_UI_GDC_test01.py  streamlit_UI_GDC_test02.py  streamlit_UI_GDC_test03 copy 2.py  streamlit_UI_GDC_test03.py  streamlit_UI_GDC_test04.py  streamlit_UI_test01.py  tahoe.ipynb  tcga_barcode_Gene_Expression_download.ipynb  tcga_barcode_VCF_download.ipynb  tcga_barcode_mutations move_dir.ipynb  tcga_barcode_mutations.ipynb  tcga_barcode_mutations_UMAP.ipynb  tcga_barcode_mutations_bio_analysis.ipynb  tcga_barcode_mutations_bio_analysis_dvlp.ipynb  tcga_barcode_mutations_cluster_dvlp.ipynb  tcga_gdc_and_cBioPortal_mutations.ipynb  tcga_gdc_and_cBioPortal_mutations_loop.ipynb  tcga_gdc_api_dvlp.ipynb  tcga_gdc_barcode_expression.ipynb  tcga_gdc_progams_and_cancer2_dvlp.ipynb  tcga_gdc_progams_and_cancer_ant01.ipynb  tcga_gdc_progams_and_cancer_old.ipynb  tcga_gtex_normal_tissue_expression.ipynb  test_tool1_reactome.ipynb  (+3 more)
notebooks_dvlp/backup/: chatbot_reactome.ipynb  tcga_barcode_VCF_download.ipynb  tcga_gdc_progams_and_cancer2.ipynb
owl/: R-HSA-114608_level3.owl  R-HSA-166658_level3.owl  R-HSA-3000178_level3.owl
rag/: Agentic RAG.ipynb  Capstone project - agentic RAG.ipynb  LightRAG.ipynb  Multimodal RAG.ipynb  RAG with OpenAI File Search.ipynb  RAGAS - Starter Code.ipynb  RAGAS.ipynb  RAG_with_OpenAI_File_Search_flavio.ipynb  Starter File - Agentic RAG.ipynb  Starter File - LightRAG.ipynb  Starter File - RAG with OpenAI File Search.ipynb  ingestion.ipynb  ingestion.py  lec04_langchain_rag.ipynb  rag_langchain_LCEL.ipynb  rag_reactome_to_vectorstore_v01.ipynb  rag_reactome_to_vectorstore_v02.ipynb  reactome_to_vectorstore.ipynb  simple_rag.ipynb
scripts/: setup_renv.R
src/: app_main.py  app_main_local.py  app_main_local_deprecated.py  gdrive_client.py  project_context.py  project_context_GDC.py  project_context_MTD.py
src/backup/: app_main.py  app_main_local.py  app_main_local_deprecated.py  project_context_MTD.py
src/libs/: Basic.py  GDC_lib.py  MTD_lib.py  Shannon_general.py  calc_degs.R  calc_degs_lib.py  (+12 more)
(+26 files in other folders)
