[project]
name = "target_disc_perturb_project"
version = "0.1.0"
description = "target discovery pipeline"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit==1.25.0",
    "protobuf==3.20.*",
    "streamlit-aggrid==0.3.3",
    "altair<6",
    "ipykernel",
    "pandas",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-community",
    "langchain-model-profiles",
    "langchain-tavily",
    "langchain-chroma",
    "langchain-huggingface",
    "tavily-python",
    "tavily",
    "python-dotenv",
    "pypdf",
    "langchain-text-splitters",
    "langgraph",
    "langgraph-cli",
    "langgraph-api",
    "ipywidgets",
    "sounddevice",
    "scipy",
    "langchain-google-genai",
    "langsmith",
    "jupyterlab",
    "gradio",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.11",
    "plotly>=6.6.0",
    "setuptools>=82.0.1",
    "hdbscan>=0.8.42",
    "scikit-posthocs>=0.12.0",
    "pygwasvcf>=0.0.4",
    "path>=17.1.1",
    "pathlib>=1.0.1",
    "pysam>=0.23.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

