[project]
name = "target_disc_perturb_project"
version = "0.1.0"
description = "Perturbation agent: a molecular target discovery pipeline"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Core
    "numpy>=1.26,<3",
    "pandas>=2.0,<2.4",
    "pyarrow>=14,<23",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "scikit-posthocs>=0.12.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "fastcluster",
    "kaleido", 

    # Clustering / VCF
    "umap-learn>=0.5,<0.6",
    "numba>=0.59,<0.60",
    "hdbscan>=0.8,<0.9",
    "pysam>=0.23,<0.24",

    # Streamlit UI
    "streamlit==1.25.0",
    "streamlit-aggrid==0.3.4.post3",
    "protobuf==3.20.*",
    "altair<6",
    "click>=8.1,<8.2",

    # Dash / Cytoscape web graph
    "dash>=2.16,<3",
    "dash-cytoscape>=1.0,<2",
    "dash-bootstrap-components", 

    # Graph / pathway parsing
    "networkx>=3.2",
    "rdflib>=7.0",
    "pyvis>=0.3.2",
    "py4cytoscape>=1.10",

    # Bioinformatics helpers
    "biopython>=1.83",
    "biomart",
    "gseapy>=1.1",
    "mygene>=3.2",
    "duckdb",
    "pybiopax",

    # Plotting
    "matplotlib>=3.8,<3.10",
    "plotly>=5.20",
    "seaborn>=0.13,<0.14",
    "matplotlib_venn",
    "pycirclize",
    "plotly",
    "markdown-pdf",

    # PDF / papers
    "pypdf>=4.0",

    # Jupyter/dev
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]


[project.optional-dependencies]
llm = [
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-chroma>=0.1",
    "chromadb>=0.5",
    "openai>=1.40",
]

dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
exclude = [
    "*.ipynb",
    "notebooks/",
    "notebooks_dvlp/",
    "src/libs/backup/",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",
    "E402",
]

# sudo apt install graphviz graphviz-dev pkg-config

# uv sync --extra dev

# ruff check .
# ruff check . --fix

